cambios realizados por sam

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "express",
     "mongodb"
   ],
-  "author": "Luis",
+  "author": "Sam",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
